# argus-proof

./: .copier-answers.yml  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
schema/: proof-wire.schema.json
src/argus_proof/: __init__.py  acceptance.py  archive.py  cli.py  crossrun.py  evaluate.py  experiment.py  explore.py  grid.py  hashing.py  models.py  moderation.py  recommend.py  refinement.py  reports.py  stats.py
src/argus_proof/backends/: __init__.py  a1111.py  base.py  comfyui.py  diffusers.py  http.py  pnginfo.py  remote.py  workflow.py
src/argus_proof/scoring/: __init__.py  base.py  gate.py  orchestrator.py  summary.py
src/argus_proof/scoring/scorers/: __init__.py  _util.py  identity.py  phash.py  quality.py  safety.py
src/argus_proof/server/: __init__.py  app.py
src/argus_proof/templates/: comfyui_sdxl_lora.json
tests/: fakebackend.py  pnghelpers.py  test_a1111_backend.py  test_acceptance.py  test_archive.py  test_backends.py  test_cli.py  test_crossrun.py  test_diffusers_backend.py  test_evaluate.py  test_experiment.py  test_explore.py  test_grid.py  test_models.py  test_moderation.py  test_pnginfo.py  test_recommend.py  test_refinement.py  test_remote_backend.py  test_reports.py  test_scorer_util.py  test_scorers_identity.py  test_scorers_phash.py  test_scorers_quality.py  test_scorers_safety.py  test_scoring.py  test_server.py  test_smoke.py  test_stats.py  test_workflow.py
