[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "argus-proof"
dynamic = ["version"]
description = "Post-training LoRA evaluation and optimisation: generate samples from a trained LoRA and score them against the curated dataset it was trained from"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "smk762" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    # Shared suite foundation (taxonomy, wire-schema tooling, AI-backend contract).
    "argus-cortex>=0.1.0",
    "pydantic>=2.7",
    "structlog>=24.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.7"]
cli = ["typer>=0.12", "rich>=13.0"]
# Concrete scorers (implement argus_proof.scoring protocols). Grows as scorers
# land: dedup/diversity (phash) + identity (InsightFace ArcFace) now; quality
# (torch stack) with #5. CI's dev extra pulls only the light deps; the heavy
# ones stay opt-in (their scorers report is_available()=False without them).
score = ["pillow>=10.0", "imagehash>=4.3", "insightface>=0.7", "onnxruntime>=1.16"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff==0.15.16", "httpx>=0.27", "pillow>=10.0", "imagehash>=4.3"]

[project.scripts]
argus-proof = "argus_proof.cli:app"

[project.urls]
Repository = "https://github.com/smk762/argus-proof"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/argus_proof/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_proof"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/argus_proof/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
