[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "argus-proof"
dynamic = ["version"]
description = "Post-training LoRA evaluation and optimisation: generate samples from a trained LoRA and score them against the curated dataset it was trained from"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "smk762" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    # Shared suite foundation (taxonomy, wire-schema tooling, AI-backend contract).
    "argus-cortex>=0.1.0",
    "pydantic>=2.7",
    "structlog>=24.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.7"]
cli = ["typer>=0.12", "rich>=13.0"]
# Concrete scorers (implement argus_proof.scoring protocols): dedup/diversity
# (phash) + identity (InsightFace ArcFace) + quality (CLIPScore/pyiqa/ImageReward).
# CI's dev extra pulls only the light deps; the heavy ones (insightface, torch…)
# stay opt-in — their scorers report is_available()=False without them.
score = [
    "pillow>=10.0",
    "imagehash>=4.3",
    "insightface>=0.7",
    "onnxruntime>=1.16",
    "torch>=2.0",
    "torchmetrics>=1.0",
    "pyiqa>=0.1.10",
    "image-reward>=1.5",
    "nudenet>=3.0",
]
# Cross-run stats store (pass-rate CIs use the dependency-free argus_proof.stats;
# the parquet store needs polars, inter-rater reliability the krippendorff pkg).
# Lightweight — pulled into dev so CI tests it.
stats = ["polars>=1.0", "krippendorff>=0.6"]
# Guided A/B search: sample-efficient exploration of an ExperimentMatrix when
# the full cartesian is too large to brute-force. Lazy-imported by
# argus_proof.experiment.optuna_search; absent -> that function raises a hint.
opt = ["optuna>=3.0"]
# Optional FiftyOne exploration surface (issue #14): open a scored run as a
# FiftyOne dataset for embedding viz + tag triage. Heavy + power-user-only, so
# NOT in dev — argus_proof.explore lazy-imports it and is_available()-guards.
fiftyone = ["fiftyone>=0.23", "umap-learn>=0.5"]  # umap-learn powers the --umap brain visualisation
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff==0.15.16", "httpx>=0.27", "pillow>=10.0", "imagehash>=4.3", "polars>=1.0", "krippendorff>=0.6", "optuna>=3.0"]

[project.scripts]
argus-proof = "argus_proof.cli:app"

[project.urls]
Repository = "https://github.com/smk762/argus-proof"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/argus_proof/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_proof"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/argus_proof/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
